<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PikShare</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_splash_screen">PikShare</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="what_is_your_birthday">What is your birthday?</string>
    <!-- <string name="sign_up_disclaimer">By creating an account, you agree to our &lt;a href="http://www.chrisrisner.com"&gt;Terms of Use&lt;a&gt; and understand our &lt;a href="http://chrisrisner.com"&gt;Privacy Policy&lt;a&gt;.</string> -->
    <string name="sign_up_disclaimer">By creating an account, you agree to our &lt;a href="http://www.chrisrisner.com">Terms of Use&lt;a> and understand our &lt;a href="http://chrisrisner.com">Privacy Policy&lt;a>.</string>
    <string name="born_in_future">You were not born in the future!</string>
    <string name="set_in_code">Set in code!</string>
    <string name="title_activity_select_username">SelectUsernameActivity</string>
    <string name="username">Username</string>
    <string name="next">Next</string>
    <string name="select_username_instrutions">Please select a unique username.\nYour username identifies you on PikShare.</string>
    <string name="error">Error</string>
    <string name="error_getting_friends">Couldn\'t refresh friends.  Please check your internet connection and try again</string>
    <string name="error_getting_piks">Couldn\'t refresh piks.  Please check your internet connection and try again.</string>
    <string name="ok">OK</string>
    <string name="email_or_username">Email or Username</string>
    <string name="title_activity_record">RecordActivity</string>
    <string name="title_activity_access_friends">Add Friends</string>
    <string name="add_friends">Add Friends</string>
    <string name="skip">Skip</string>
    <string name="access_friends_request">PikShare would like to access your contacts</string>
    <string name="allow_access">Allow Access</string>
    <string name="title_activity_friends_list">My Friends</string>
    <string name="search">Search</string>
    <string name="search_for_friends">Search for friends</string>
    <string name="add_friend">Add Friend</string>
    <string name="title_activity_piks_list">Pik Share</string>
    <string name="settings">Settings</string>
    <string name="my_account">MY ACCOUNT</string>
    <string name="mobile_number">Mobile #</string>
    <string name="privacy">PRIVACY</string>
    <string name="receive_piks_from">Receive Piks from...</string>
    <string name="share_stories_to">Share Stories to...</string>
    <string name="advanced">ADVANCED</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="video_settings">Video Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="join_beta">Join PikShare Beta</string>
    <string name="account_actions">ACCOUNT ACTIONS</string>
    <string name="clear_feed">Clear feed</string>
    <string name="log_out">Log out</string>
    <string name="more_information">MORE INFORMATION</string>
    <string name="support">Support</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="everyone">Everyone</string>
    <string name="video_recording_failed">Video recording failed.</string>
    <string name="just_friends">Just friends</string>
    <string name="instructions_friend_request"> - Press and hold to accept</string>
    <string name="instructions_accepted_friend_request"> - Friend request accepted</string>
    <string name="instructions_unseen_pik"> - Press and hold to view</string>
    <string name="instructions_seen_pik"> - Double tap to reply</string>
    <string name="delivered"> - Delivered</string>

    <string-array name="pref_list_privacy">
        <item>Everyone</item>
        <item>Just friends</item>
    </string-array>
    <string-array name="share_seconds_list">
        <item>1 second</item>
        <item>2 seconds</item>
        <item>3 seconds</item>
        <item>4 seconds</item>
        <item>5 seconds</item>
        <item>6 seconds</item>
        <item>7 seconds</item>
        <item>8 seconds</item>
        <item>9 seconds</item>
        <item>10 seconds</item>
    </string-array>

    <string name="title_activity_send_to_friends">Send To...</string>
    <string name="empty_string"></string>
    
    <string name="sending">- Sending</string>
    <string name="opened">- Opened</string>
    <string name="no_piks">You don\'t have any Piks :(</string>
    <string name="pending">Pending...</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="save">Save</string>

</resources>
